# esp32-module-industrial

./: Cargo.toml  build.rs  memory.x
.cargo/: config.toml
src/: main.rs  modbus.rs  pins.rs  relays.rs
