[package]
name = "stm32-relay-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
embedded-hal = "1.0.0"

# STM32 HAL - correct features for v0.23.0
stm32f4xx-hal = { version = "0.23.0", features = ["stm32f407"] }

# Remove embassy for now - it conflicts with STM32 HAL versions
# embassy-executor = "0.5.0"
# embassy-time = "0.3.0"
# embassy-sync = "0.5.0"

# Remove defmt for now - use simpler approach
# defmt = "0.3.0"
# defmt-rtt = "0.4.0"
# panic-probe = { version = "0.3.0", features = ["print-defmt"] }